<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">JavaZone</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <plurals name="schedule_block_subtitle" description="Shown in the schedule to indicate how many sessions are available on that particular time slot.">
        <item quantity="one"><xliff:g id="number_of_sessions">%1$d</xliff:g> available session</item>
        <item quantity="other"><xliff:g id="number_of_sessions">%1$d</xliff:g> available sessions</item>
    </plurals>
    <plurals name="session_notification_text" description="Shows as a notification on the system bar to alert user that some of their sessions are about to begin.">
        <item quantity="one">and <xliff:g id="num_sessions">%2$d</xliff:g> other starting in <xliff:g id="remaining_time">%1$d</xliff:g> min.</item>
        <item quantity="other">and <xliff:g id="num_sessions">%2$d</xliff:g> others starting in <xliff:g id="remaining_time">%1$d</xliff:g> min.</item>
    </plurals>
    <plurals name="session_notification_ticker" description="Shown as a notification on the system bar to alert user that some of their sessions are about to begin.">
        <item quantity="one">%1$d session is about to start.</item>
        <item quantity="other">%1$d sessions are about to start.</item>
    </plurals>
    <plurals name="session_plurals" description="Indicates a certain number of sessions.">
        <item quantity="one">%1$d session</item>
        <item quantity="other">%1$d sessions</item>
    </plurals>
    <plurals name="session_notification_title">
        <item quantity="one"><xliff:g id="num_sessions">%2$d</xliff:g> session is starting in <xliff:g id="remaining_time">%1$d</xliff:g> min.</item>
        <item quantity="other"><xliff:g id="num_sessions">%2$d</xliff:g> sessions are starting in <xliff:g id="remaining_time">%1$d</xliff:g> min.</item>
    </plurals>
    <plurals name="duration_hours">
        <item quantity="one">%s hour</item>
        <item quantity="other">%s hours</item>
    </plurals>
    <plurals name="duration_minutes">
        <item quantity="one">%s minute</item>
        <item quantity="other">%s minutes</item>
    </plurals>
    <string name="about_main"><![CDATA[
        <b>Google I/O 2016</b><br>
        Version %s
    ]]></string>
    <string name="permission_write">Modify JavaZone schedule data</string>
    <string name="navdrawer_description_a11y">Navigation Menu</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_info">Info</string>
    <string name="unknown_room">(Unspecified Room)</string>
    <string name="watch_now">Watch Now!</string>
    <string name="day_title_today">Today</string>
    <string name="day_title_tomorrow">Tomorrow</string>
    <string name="day_title_yesterday">Yesterday</string>
    <string name="all_themes">All Themes</string>
    <string name="all_topics">All Topics</string>
    <string name="all_types">All Types</string>
    <string name="topics">Topics</string>
    <string name="types">Types</string>
    <string name="themes">Themes</string>
    <string name="my_schedule_rate_this_session">Rate this session</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="title_my_main">My schedule</string>
    <string name="add_bookmark_hint">Event saved in My schedule</string>
    <string name="remove_bookmark_hint">Event removed from My schedule</string>
    <string name="bookmark_hint_optout">Got it</string>
    <string name="remove_bookmark">Event removed from My schedule</string>
    <string name="clear_filters">Clear filters</string>
    <string name="navdrawer_item_my_schedule">Schedule</string>
    <string name="close_and_go_back">Close and go back</string>
    <string name="description_map">Map</string>
    <string name="description_share">Share</string>
    <string name="time_hint_about_to_start_min"><![CDATA[This session will start in <xliff:g id=\"minutes\">%1$d</xliff:g> min.]]></string>
    <string name="empty_session_detail">No session details found.</string>
    <string name="rate_session">Rate session</string>
    <string name="add_to_schedule">Add to schedule</string>
    <string name="session_details_a11y_session_added">Session added to your schedule</string>
    <string name="session_details_a11y_session_removed">Session removed from your schedule</string>
    <string name="remove_from_schedule">Remove from schedule</string>
    <string name="share_template"><![CDATA[Check out \\\'<xliff:g id=\"title\">%1$s</xliff:g>\\\' at <xliff:g id=\"hashtags\">%2$s</xliff:g> <xliff:g id=\"url\">%3$s</xliff:g>]]></string>
    <string name="title_share">Share using</string>
    <string name="time_hint_session_ended">This session has ended.</string>
    <string name="time_hint_started_min"><![CDATA[This session is happening now! (started <xliff:g id=\"minutes\">%1$d</xliff:g> min. ago)]]></string>
    <string name="time_hint_started_just">This session is happening now! (just started)</string>
    <string name="time_hint_about_to_start_shortly">This session is about to start (less than 1 minute).</string>
    <string name="title_session_detail">Session Information</string>
    <string name="title_my_schedule">My Schedule</string>
    <string name="navdrawer_item_my_io">My Schedule</string>
    <string name="title_digital_pass">Digital Pass</string>
    <string name="title_stamp">Stamps</string>
    <string name="navdrawer_item_digital_pass">Digital Pass</string>
    <string name="navdrawer_item_map">Map</string>
    <string name="title_map">Map</string>
    <string name="description_avatar">Avatar</string>
    <string name="add_events">Add events</string>
    <string name="myqr">My QR</string>
    <string name="scan_button">Scan QR-code</string>
    <string name="scan">Scan</string>
    <string name="feedback_rating_confirmation">Your rating: %1$d out of %2$d stars"</string>
    <string name="feedback_rating_value">%1$d star</string>
    <string name="session_rating_label_text">Session rating:</string>
    <string name="session_feedback_advanced">Too advanced</string>
    <string name="session_feedback_basic">Too basic</string>
    <string name="session_feedback_content_label_text">Based on the description/my expectations, the content was:</string>
    <string name="session_feedback_notification_ticker">Provide session feedback</string>
    <string name="session_feedback_not_so_awesome">Not so awesome</string>
    <string name="session_feedback_awesome">Awesome</string>
    <string name="session_feedback_not_at_all_relevant">Not at all</string>
    <string name="session_feedback_extremely_relevant">Extremely</string>
    <string name="session_feedback_outstanding">Outstanding</string>
    <string name="session_feedback_poor">Poor</string>
    <string name="session_feedback_relevance"> How relevant was this session to your projects?  </string>
    <string name="session_feedback_speaker_quality">Speaker quality:</string>
    <string name="feedback_comment_text">Any other comments?</string>
    <string name="session_finished">Ended</string>
    <string name="session_feedback_submitlink">Submit Feedback</string>
    <string name="session_give_feedback_message">How was this session? Would you like to send feedback?</string>
    <string name="title_session_feedback">Session Feedback</string>
    <string name="navdrawer_item_info">Info</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="settings_time_zone_label">Show events in Pacific Time (PT)</string>
    <string name="settings_enable_notifications">Enable notifications</string>
    <string name="settings_enable_anon_statistics">Send anonymous usage statistics</string>
    <string name="title_settings">Settings</string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="about_licenses">Open Source Licenses</string>
    <string name="about_terms">Terms And Conditions</string>
    <string name="about_app_version">Version %1$s</string>
    <string name="ok">OK</string>
    <string name="about_eula">End User License Agreement</string>
    <string name="title_about">About</string>
    <string name="about_terms_url">https://java.no/policy.html</string>
    <string name="expanded">Expanded</string>
    <string name="collapsed">Collapsed</string>
    <string name="title_travel">Travel</string>
    <string name="wifi_network_label">Wifi network</string>
    <string name="wifi_password_label">Password</string>
    <string name="setup_wifi">Save wifi network</string>
    <string name="wifi_install_success">Wifi network saved</string>
    <string name="wifi_install_error_message">Sorry, unable to save wifi network</string>
    <string name="title_event">Event</string>
    <string name="view_sessions_text">View Sessions</string>
    <string name="view_codelabs_text">View Codelabs</string>
    <string name="view_events_text">View Events</string>
    <string name="view_map_text">View Map</string>
    <string name="event_sandbox_title">Sandbox</string>
    <string name="event_codelabs_title">Codelabs</string>
    <string name="event_sessions_title">Sessions</string>
    <string name="event_officehours_title">Office Hours &amp; App Reviews</string>
    <string name="event_afterhours_title">After Hours</string>
    <string name="default_wifi_network_key" translatable="false">default_wifi_network</string>
    <string name="default_wifi_password_key" translatable="false">default_wifi_password</string>
    <string name="salt_key" translatable="false">salt</string>
    <string name="event_sandbox_description_key" translatable="false">
        event_sandbox_description</string>
    <string name="event_code_labs_description_key" translatable="false">
        event_code_labs_description</string>
    <string name="event_office_hours_description_key" translatable="false">
        event_office_hours_description</string>
    <string name="event_after_hours_description_key" translatable="false">
        event_after_hours_description</string>
    <string name="travel_details_title">Travel Details</string>
    <string name="travel_shuttle_info_title">Shuttle Service</string>
    <string name="travel_carpool_parking_info_title">Parking &amp; Carpool</string>
    <string name="travel_public_transportation_info_title">Public Transportation</string>
    <string name="travel_biking_info_title">Biking</string>
    <string name="travel_ride_sharing_info_title">Ride Sharing</string>
    <string name="travel_shuttle_service_description_key" translatable="false">
        travel_shuttle_service_description</string>
    <string name="travel_carpooling_parking_description_key" translatable="false">
        travel_carpooling_parking_description</string>
    <string name="travel_public_transportation_description_key" translatable="false">
        travel_public_transportation_description</string>
    <string name="travel_biking_description_key" translatable="false">
        travel_biking_description</string>
    <string name="travel_ride_sharing_description_key" translatable="false">
        travel_ride_sharing_description</string>
    <string name="faq_stay_informed_title" translatable="false">Stay Informed</string>
    <string name="faq_stay_informed_description_key" translatable="false">
        faq_stay_informed_description</string>
    <string name="faq_content_formats_title" translatable="false">Content Formats</string>
    <string name="faq_content_formats_description_key" translatable="false">
        faq_content_formats_description</string>
    <string name="faq_livestream_and_recordings_title" translatable="false">
        Livestream &amp; Recordings</string>
    <string name="faq_additional_info_title" translatable="false">Additional Info</string>
    <string name="about_javazone">About JavaZone</string>
</resources>